--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -108,7 +108,7 @@ a {
   img{
     height: 150px;
     &:hover{
-      opacity: 0.7;
+      filter: invert(1) drop-shadow(2px 2px 2px black);
     }
   }
   
