--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -41,7 +41,6 @@ h1,h2,h3,h4,h5,h6,body {
 line-height: 1.57;
   letter-spacing: 0.15em;
   font-size: 16px;
-  color: $dark;
   font-family: 'Unica One', "Dakota", "Avenir", "游ゴシック", "YuGothic", "ヒラギノ角ゴ Pro W6", "HIragino Kaku Gothic Pro W6", "HIragino Kaku Gothic Pro", Osaka, Meiryo, "メイリオ", "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
   margin: 0;
 }
@@ -54,6 +53,7 @@ a {
     color: $accent;
   }
 }
+
 
 .bold {
   font-weight: bold;
@@ -93,15 +93,10 @@ a {
 }
 
 .continued{
-  // -webkit-animation-name: slideimage;
-  // animation-name: slideimage;
-  // -webkit-animation-duration: 3s;
-  // animation-duration: 3s;
   backface-visibility: hidden;
   position: absolute;
   top: 66%;
   left: -5px;
-  // opacity: 0;
   z-index: 3;
   transition-duration :3s;
   transform:translateX(800px);
@@ -116,7 +111,6 @@ a {
 
 .slick-active{
   .continued{
-      opacity: 1;
       transform:translateX(0);
       transition:all 1s 0.3s;
   }
@@ -258,9 +252,12 @@ a {
     background-repeat:  no-repeat;
     background-size: contain;
     background-position: center center;
-    background-color:#ddd;
+    background-color:#222;
     border: solid 5px transparent;
     animation-play-state:paused;
+    &:focus{
+      outline: none;
+    }
     &:after {
       content: '';
       position: absolute;
@@ -379,6 +376,7 @@ a {
    }
   }
 
+
   .first-post {
     // border: solid 30px transparent;
   }
@@ -395,11 +393,24 @@ a {
   .last-post{
     p{
       filter: saturate(150%) contrast(0.5) sepia(100%);
-    }
-    
-   &:focus{
-    filter: blur(1.5px) brightness(50%);
-   }
+    } 
+    &:focus{
+      .edit-user{
+        transform:translateY(0);
+        transition:all 1s ease-in-out;
+        opacity:1;
+      }
+      &:before{
+        content: '';
+        position: absolute;
+        top: -5px;
+        bottom: -5px;
+        left: -5px;
+        right: -5px;
+        background: inherit;
+        filter: saturate(150%) contrast(0.5) sepia(100%) blur(1.5px) brightness(35%);
+       }
+     }
    &:before{
     content: '';
     position: absolute;
@@ -409,11 +420,41 @@ a {
     right: -5px;
     background: inherit;
     filter: saturate(150%) contrast(0.5) sepia(100%);
-    
    }
-   
   }
-  
+
+  .edit-user{
+    position: absolute;
+    top: 0;
+    right: 200px;
+    left: 200px;
+    bottom: 0;
+    text-align: center;
+    color: antiquewhite;
+    opacity:0;
+    transition-duration :1.5s;
+    transform:translateY(-500px);
+    &-box{
+      margin:0 auto;
+    }
+    &__title{
+      padding-top: 70px;
+      padding-bottom: 20px;
+      h4 {
+        font-size: 25px;
+      }
+    }
+    &__icon{
+      img{
+        margin:0 auto;
+        border-radius: 50%;
+      }
+    }
+    &__name{
+      padding: 10px;
+    }
+  }
+
 
 .success {
     @include boxBase(20px 0 ,30px);
