--- a/app/assets/stylesheets/setting.css
+++ b/app/assets/stylesheets/setting.css
@@ -469,10 +469,7 @@ ul li {
 
 .row {
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin:0 auto;
   max-width: 800px;
   *zoom: 1;
 }
