--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -33,10 +33,6 @@ body,html {
   background-color: $lightGray;
 }
 
-body {
-  padding-top: 60px;
-}
-
 h1,h2,h3,h4,h5,h6,body {
 line-height: 1.57;
   letter-spacing: 0.15em;
@@ -230,8 +226,10 @@ a {
     right: 0;
   }
 }
-.contents.row {
-  
+.mein {
+  width: 100%;
+  height: 100%;
+  padding:30px 0;
   h2 {
     @include boxBase(20px 0, 0);
     font-weight: normal;
@@ -240,6 +238,9 @@ a {
       padding-right: 5px;
       font-size: 1.2em;
     }
+  }
+  .contents{
+    margin:0 auto;
   }
   .new_user{
   font-family: "游ゴシック", "YuGothic";
@@ -252,7 +253,7 @@ a {
     background-repeat:  no-repeat;
     background-size: contain;
     background-position: center center;
-    background-color:#222;
+    background-color:#f0f0f0;
     border: solid 5px transparent;
     animation-play-state:paused;
     &:focus{
@@ -499,6 +500,7 @@ form {
   box-shadow: 0 0 10px rgba($black,0.2);
   background-color: $white;
   box-sizing: border-box;
+  max-width: 800px;
 }
 .comments {
   padding: 5px;
@@ -517,5 +519,121 @@ footer {
   p {
     text-align: center;
   }
+}
+
+.modalArea {
+  display: none;
+  position: fixed;
+  z-index: 10; /*サイトによってここの数値は調整 */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.modalBg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(30,30,30,0.9);
+}
+
+.modalWrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%,-50%);
+  width: 100%;
+  max-width: 800px;
+}
+
+.closeModal {
+  position: absolute;
+  cursor: pointer;
+  font-size: 30px;
+  padding: 0 14px;
+  top: -80px;
+  right: -70px;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  opacity: 0.3;
+  &:hover{
+    opacity:0.5;
+  }
+}
+
+.thumb{
+  color: #fff;
+  cursor: pointer;
+  width: 100%;
+  border: solid 3px black;
+  background-color: #222;
+  // overflow: hidden;
+  text-align: center;
+  margin-bottom: 10px;
+  &:hover{
+    .thumbnail{
+      opacity:1;
+      filter: blur(1px) drop-shadow(5px 5px 5px #333);
+      transform: scale(1.3);
+      z-index: 1;
+      position: relative;
+      border:1px solid transparent;
+    }
+    
+    // &:before{
+    //   content: '';
+    //   position: absolute;
+    //   top: -6px;
+    //   bottom: -6px;
+    //   left: -6px;
+    //   right: -6px;
+    //   background: inherit;
+    //   filter: blur(3px);
+    // }
+  }
+  // &:before{
+  //   content: '';
+  //   position: absolute;
+  //   top: -15px;
+  //   bottom: -15px;
+  //   left: -15px;
+  //   right: -15px;
+  //   background: inherit;
+  //   filter: blur(5px);
+  //   transition:all 0.5s ease;
+  // }
+  
+}
+
+.thumb-box{
+  width:250px;
+}
+
+.cover{
+  background-color:white;
+}
+
+.stamp{
+  width: 500px;
+  height: 350px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  cursor: pointer;
+  transition-duration: 0.5s;
+  z-index:5;
+  &:hover{
+    transform: scale(1.1) rotate(9deg);
+    transition-duration: 0.5s;
+
+  }
+}
+
+
+.thumbnail{
+  filter: blur(5px);
+  transition:all 0.5s ease;
+  opacity: 0.7;
 }
 
