--- a/app/views/posts/create.html.haml
+++ b/app/views/posts/create.html.haml
@@ -1,5 +1,6 @@
-.contents.row
-  .success
-    %h3
-      投稿が完了しました。
-    %a.btn{:href => "/posts"} 投稿一覧へ戻る
+.mein
+  .contents.row
+    .success
+      %h3
+        投稿が完了しました。
+      %a.btn{:href => "/posts"} 投稿一覧へ戻る
