--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,3 +1,7 @@
-.contents.row
-  - @posts.each do |post|
-    = render partial: "post", locals: { post: post }
+.mein
+  #masonry.contents
+    - @posts.each do |post|
+      = render partial: "post", locals: { post: post }
+    .cover
+      =image_tag src="continued.png",class:"stamp"
+      
