--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -621,15 +621,19 @@ footer {
   bottom: 0;
   right: 0;
   cursor: pointer;
-  transition-duration: 0.5s;
+  transition-duration: 1.5s;
   z-index:5;
+  transform: translateX(-10000px);
   &:hover{
     transform: scale(1.1) rotate(9deg);
-    transition-duration: 0.5s;
-
   }
+  
 }
 
+.stop{
+  transform: translateX(0)
+
+}
 
 .thumbnail{
   filter: blur(5px);
