--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -3,5 +3,5 @@
     - @posts.each do |post|
       = render partial: "post", locals: { post: post }
     .cover
-      =image_tag src="continued.png",class:"stamp"
+      =image_tag src="continued.png",class:"stamp stop"
       
