--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,29 +1,31 @@
-.mein
-  .container.contents
-    = form_for(post) do |f|
-      %h3
-        投稿する
-      %h4
-        サムネ
-      = f.file_field :image,multiple: true,placeholder: "Image Url"
-      = f.text_area :text,multiple: true,cols: "30",placeholder: "text",rows: "3"
-      %h4
-        起
-      = f.file_field :image,multiple: true,placeholder: "Image Url"
-      = f.text_area :text,multiple: true,cols: "30",placeholder: "text",rows: "3"
-      %h4
-        承
-      = f.file_field :image,multiple: true,placeholder: "Image Url"
-      = f.text_area :text,multiple: true,cols: "30",placeholder: "text",rows: "3"
-      %h4
-        転
-      = f.file_field :image,multiple: true,placeholder: "Image Url"
-      = f.text_area :text,multiple: true,cols: "30",placeholder: "text",rows: "3"
-      %h4
-        決
-      = f.file_field :image,multiple: true,placeholder: "Image Url"
-      = f.text_area :text,multiple: true,cols: "30",placeholder: "text",rows: "3"
-      %h4
-        continued
-      = f.text_field :link,placeholder: "continued"
-      = f.submit "SENT"
+.container.contents
+  = form_for(post) do |f|
+    %h2
+      continue
+    %p.top-exp
+      続きが気になる話を,画像を添えて聴かせてください
+    %h3
+      thunmbnail
+    = f.file_field :image,multiple: true,placeholder: "Image Url"
+    = f.text_area :text,multiple: true,cols: "30",placeholder: "サムネイルとタイトルを選んでください",rows: "3"
+    %h3
+      exposition
+    = f.file_field :image,multiple: true,placeholder: "Image Url"
+    = f.text_area :text,multiple: true,cols: "30",placeholder: "話の始まりを聴かせてください",rows: "3"
+    %h3
+      rising action
+    = f.file_field :image,multiple: true,placeholder: "Image Url"
+    = f.text_area :text,multiple: true,cols: "30",placeholder: "それからどうなっていくんでしょうか",rows: "3"
+    %h3
+      climax
+    = f.file_field :image,multiple: true,placeholder: "Image Url"
+    = f.text_area :text,multiple: true,cols: "30",placeholder: "急展開です",rows: "3"
+    %h3
+      falling action
+    = f.file_field :image,multiple: true,placeholder: "Image Url"
+    = f.text_area :text,multiple: true,cols: "30",placeholder: "もう目が離せません",rows: "3"
+    %p.exp
+    %h3
+      continued
+    = f.text_field :link,placeholder: "続きはどこで見れますか？"
+    = f.submit "SENT"
