--- a/app/views/posts/create.html.haml
+++ b/app/views/posts/create.html.haml
@@ -1,6 +1,9 @@
-.mein
-  .contents.row
-    .success
-      %h3
-        投稿が完了しました。
-      %a.btn{:href => "/posts"} 投稿一覧へ戻る
+.contents.row
+  .success
+    %h3
+      To Be continued...
+    %p
+      投稿ありがとうございました
+    %p
+      先生の次回作にも期待しています
+    %a.btn{:href => "/posts"} back
