--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,40 +8,10 @@
     = csrf_meta_tags
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
     %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"}
-    -# :javascript
-    -#   $(function() {
-    -#   	$('.slick-box').slick(); 
-    -#   });
-    -# :javascript
-    -#   WebFontConfig = {
-    -#     google: { families: [ 'Unica+One::latin' ] }
-    -#   };
-    -#   (function() {
-    -#     var wf = document.createElement('script');
-    -#     wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-    -#       '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-    -#     wf.type = 'text/javascript';
-    -#     wf.async = 'true';
-    -#     var s = document.getElementsByTagName('script')[0];
-    -#     s.parentNode.insertBefore(wf, s);
-    -#   })();
-    
-    -# %script{src:"//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", type:"text/javascript"}
   %body
-    -# %header.header
-      .header__cover
-        .header__bar
-          %h1.grid-6
-            =link_to "/" do
-              = image_tag src="continued.png",class:"titleimage"
-          .user_nav.grid-6
-            = current_user.name
-            %ul.user__info
-              %li
-                %a{:href => "/users/#{current_user.id}"} マイページ
-                = link_to "ログアウト", destroy_user_session_path,method: :delete
-            %a.post{:href => "/posts/new"} 投稿する
-    = yield
+    .mein
+      = yield
     =javascript_include_tag "slick.min.js"
     =javascript_include_tag "masonry.pkgd.min.js"
     =javascript_include_tag "imagesloaded.pkgd.min.js"
+
