--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,7 +1,5 @@
-.mein
-  #masonry.contents
-    - @posts.each do |post|
-      = render partial: "post", locals: { post: post }
-    .cover
-      =image_tag src="continued.png",class:"stamp stop"
+=render "layouts/header"
+#masonry.contents
+  - @posts.each do |post|
+    = render partial: "post", locals: { post: post }
       
