--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,23 @@
 =render "layouts/header"
-#masonry.contents
-  - @posts.each do |post|
-    = render partial: "post", locals: { post: post }
-      
+.mein
+  #masonry.contents
+    - @posts.each do |post|
+      .thumb-box
+        .thumb{data: {target: "thumb#{post.id}"}}
+          =image_tag src="#{post.image[0]}",class:"thumbnail",alt:"サムネイル",loding:"lazy"
+          .balloon-left.js-marker
+            = simple_format(post.text[0])
+          .balloon-rigth.js-marker
+            = simple_format(post.text[0])
+          =image_tag src="don.png",class:"efect js-don",alt:"効果音",loding:"lazy"
+          =image_tag src="gogogo.png",class:"efect js-gogogo",alt:"効果音",loding:"lazy"
+          =image_tag src="zawazawa.gif",class:"efect js-boss",alt:"効果音",loding:"lazy"
+          =image_tag src="ban.png",class:"efect js-gogogo",alt:"効果音",loding:"lazy"
+          =image_tag src="dogaga.png",class:"efect js-gogogo",alt:"効果音",loding:"lazy"
+      .modalArea{id:"thumb#{post.id}"}
+        #modalBg.modalBg
+        .modalWrapper
+          .modalContents
+            = render partial: "post", locals: { post: post }
+      #closeModal.closeModal
+        &#10005;
