--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,10 +8,13 @@
     = csrf_meta_tags
     %meta{:content => "width=device-width,initial-scale=1", :name => "viewport"}/
     %script{:src => "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"}
+    -# %script{src:"https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.min.js"}
+    -# %script{src:"https://cdnjs.cloudflare.com/ajax/libs/jscroll/2.4.1/jquery.jscroll.min.js"}
     %link{href:"https://use.fontawesome.com/releases/v5.6.1/css/all.css",rel:"stylesheet"}
   %body
     = yield
     =javascript_include_tag "slick.min.js"
     =javascript_include_tag "masonry.pkgd.min.js"
     =javascript_include_tag "imagesloaded.pkgd.min.js"
+    =javascript_include_tag "infinite-scroll.pkgd.min.js"
 
