--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -495,6 +495,7 @@ a {
         margin:0 auto;
         border-radius: 50%;
         width:120px;
+        height: 120px;
       }
       &:hover{
         filter: drop-shadow(0px 0px 5px #f5f5f5); 
@@ -798,4 +799,14 @@ footer {
   position: fixed;
   opacity: 0.5;
   width: 100%;
+}
+
+.pagination{
+  display: none;
+}
+
+.infinite-scroll-request {
+   width: 100%;
+  height: 30vh;
+  object-fit: cover;
 }
