--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,26 +1,31 @@
-.contents.row
-  %h2 Sign up
-  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-    = devise_error_messages!
-    .field
-      = f.label :name
-      %em (6 characters maximum)
-      %br/
-      = f.text_field :name, autofocus: true, maxlength: "6"
-    .field
-      = f.label :email
-      %br/
-      = f.email_field :email
-    .field
-      = f.label :password
-      - if @validatable
-        %em
-          (#{@minimum_password_length} characters minimum)
-      %br/
-      = f.password_field :password, autocomplete: "off"
-    .field
-      = f.label :password_confirmation
-      %br/
-      = f.password_field :password_confirmation, autocomplete: "off"
-    .actions
-      = f.submit "Sign up"
+.mein
+  .contents.row
+    %h2 Sign up
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      .field
+        = f.label :name
+        %em (6 characters maximum)
+        %br/
+        = f.text_field :name, autofocus: true, maxlength: "6"
+      .field
+        = f.label :email
+        %br/
+        = f.email_field :email
+      .field
+        = f.label :password
+        - if @validatable
+          %em
+            (#{@minimum_password_length} characters minimum)
+        %br/
+        = f.password_field :password, autocomplete: "off"
+      .field
+        = f.label :password_confirmation
+        %br/
+        = f.password_field :password_confirmation, autocomplete: "off"
+      .field.edit-user__icon
+        =f.label :avatar
+        
+        = f.file_field :avatar
+      .actions
+        = f.submit "Sign up"
