--- a/app/views/posts/create.html.haml
+++ b/app/views/posts/create.html.haml
@@ -1,9 +1,10 @@
-.contents.row
-  .success
-    %h3
-      To Be continued...
-    %p
-      投稿ありがとうございました
-    %p
-      先生の次回作にも期待しています
-    %a.btn{:href => "/posts"} back
+.mein
+  .contents.row
+    .success
+      %h3
+        To Be continued...
+      %p
+        投稿ありがとうございました
+      %p
+        先生の次回作にも期待しています
+      %a.btn{:href => "/posts"} back
