--- a/app/views/posts/update.html.haml
+++ b/app/views/posts/update.html.haml
@@ -1,5 +1,6 @@
-.contents.row
-  .success
-    %h3
-      更新が完了しました。
-    %a.btn{:href => "/"} 投稿一覧へ戻る
+.mein
+  .contents.row
+    .success
+      %h3
+        更新が完了しました。
+      %a.btn{:href => "/"} 投稿一覧へ戻る
