--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -805,8 +805,13 @@ footer {
   display: none;
 }
 
+.page-load-status{
+  text-align: center;
+}
+
 .infinite-scroll-request {
-   width: 100%;
+  width: 100%;
   height: 30vh;
   object-fit: cover;
+  background-image:url(zawazawa.gif);
 }
