--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -45,13 +45,13 @@
               .edit-user__share
                 %ul.share-button
                   %li
-                    =link_to "https://www.facebook.com/sharer/sharer.php?u=#{request.url}&text=タイトル",class:"share-button-box",target:'_blank' do
+                    =link_to "https://www.facebook.com/sharer/sharer.php?u=#{request.url}&text=【#{post.text[0]}】To be continued... ",class:"share-button-box",target:'_blank' do
                       %i.fab.fa-facebook.fb-button
                   %li
-                    =link_to "https://twitter.com/share?url=#{request.url}&text=タイトル",class:"share-button-box",target:'_blank' do
+                    =link_to "https://twitter.com/share?url=#{request.url}&text=【#{post.text[0]}】To be continued... ",class:"share-button-box",target:'_blank' do
                       %i.fab.fa-twitter.twi-button
                   %li
-                    =link_to "http://line.me/R/msg/text/?#{request.url}&text=タイトル",class:"share-button-box",target:'_blank' do
+                    =link_to "http://line.me/R/msg/text/?#{request.url}&text=【#{post.text[0]}】To be continued... ",class:"share-button-box",target:'_blank' do
                       %i.fab.fa-line.line-button
       #closeModalS.closeModalS
         = image_tag 'more.png'
