--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,10 +1,10 @@
-.modalArea{id:"thumb#{post.id}"}
-  #modalBg.modalBg
-  .modalWrapper
-    .modalContents
-      = render partial: "post", locals: { post: post }
-#closeModal.closeModal
-  &#10005;
+-# .modalArea{id:"thumb#{post.id}"}
+-#   #modalBg.modalBg
+-#   .modalWrapper
+-#     .modalContents
+-#       = render partial: "post", locals: { post: post }
+-# #closeModal.closeModal
+-#   &#10005;
 
 
 
